src/objects/IntegrationTIC__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Impostazioni usate per l&apos;integrazione con sistema fatturazione TIC</description>
    <fields>
        <fullName>AbilitaCheckIVA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AbilitaCheckIVA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CodArtDescrittivo__c</fullName>
        <description>Articolo usato per riga descrittiva</description>
        <label>CodArtDescrittivo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <description>Endpoint del servizio</description>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_IVA_Emittente__c</fullName>
        <label>P IVA Emittente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serie_Est__c</fullName>
        <description>Valore per la serie estera da inviare a TIC</description>
        <label>Serie Est.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serie_ITA__c</fullName>
        <description>Valore per la serie italiana da inviare a TIC</description>
        <label>Serie ITA</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stati_Finali__c</fullName>
        <description>Stati finali per cui non richiedere piu gli stati</description>
        <label>Stati Finali</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IntegrationTIC</label>
</CustomObject>